package model.entity.tower;

import javafx.scene.canvas.GraphicsContext;
import javafx.scene.paint.Color;
import model.Projectile;
import model.SplashProjectile;
import model.entity.enemy.Enemy;
import util.GameConfig;

import java.util.List;

/**
 * CannonTower.java
 * tower ที่ยิง splash damage โจมตี enemy หลายตัวพร้อมกัน ราคาสูงสุด
 */
public class CannonTower extends Tower {

    private int splashRadius;

    // enemiesRef is for splash
    private List<Enemy> enemiesRef;

    public CannonTower(int tileX, int tileY) {
        super(
                tileX,
                tileY,
                120,
                2,
                20,
                80,
                1500
        );
        setSplashRadius(60);
        setCanHitFlying(false);
    }

    public void setSplashRadius(int splashRadius) {
        this.splashRadius = splashRadius;
    }

    public void setEnemiesRef(List<Enemy> enemies) {
        this.enemiesRef = enemies;
    }

    @Override
    public Projectile attack(Enemy target) {
        if (isNotReady() || enemiesRef == null) return null;
        resetCooldown();
        double cx = (getTileX() * GameConfig.TILE_SIZE) + (GameConfig.TILE_SIZE / 2.0);
        double cy = (getTileY() * GameConfig.TILE_SIZE) + (GameConfig.TILE_SIZE / 2.0);
        return new SplashProjectile(
                cx,
                cy,
                target,
                getDamage(),
                splashRadius,
                enemiesRef
        );
    }

    @Override
    public void render(GraphicsContext gc) {
        super.render(gc);
        double x = getTileX() * GameConfig.TILE_SIZE;
        double y = getTileY() * GameConfig.TILE_SIZE;
        double s = GameConfig.TILE_SIZE;

        // cannon
        gc.setFill(Color.DIMGRAY);
        double cx = x + s / 2.0;
        double cy = y + s / 2.0;
        gc.fillRoundRect(cx - 6, cy - 14, 12, 20, 4, 4);

        // base, circle
        gc.setFill(Color.SLATEGRAY);
        gc.fillOval(cx - 10, cy - 6, 20, 20);
    }
}